hphp/hack/test/typecheck/shapes_cc_13.php.exp
File "shapes_cc_13.php", line 6, characters 14-15:
Shape field name must be a nonempty single-quoted string or a class constant (Parsing[1002])
